[BZ 1127654] - Patternfly theme: various minor UI issues - invisible scrollbars are not invisible anymore, font color
(cherry picked from commit 513268503fee76395e2ade9b13b91e563a45ae1e)

--- a/modules/enterprise/gui/coregui/src/main/webapp/org.rhq.coregui.CoreGUI/sc/skins/CoreGUI/skin_styles.css
+++ b/modules/enterprise/gui/coregui/src/main/webapp/org.rhq.coregui.CoreGUI/sc/skins/CoreGUI/skin_styles.css
@@ -6,6 +6,7 @@
 body {
     /*  line-height: 1.66667;*/
     font-size: 12px;
+    color: #4D5258;
 }
 
 td {
@@ -73,7 +74,7 @@ input[name="fileUploadItem"] {
 
 .groupLabel, .HeaderLabel, .SectionHeader {
     font-size: 24px;
-    color: rgb(51, 51, 51);
+    color: #4D5258;
     font-weight: 300;
     margin-left: 0;
     padding-left: 0;
@@ -168,7 +169,7 @@ General
 
 .pageBackground {
     font-size: 11px;
-    color: #333333;
+    color: #4D5258;
     background: #FAFAFA;
 }
 
@@ -525,7 +526,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 .windowHeaderHilite,
 .dialogHeader,
 .dialogHeaderHilite {
-    color: #333;
+    color: #4D5258;
     background-color: #f5f5f5;
     margin-right: -4px;
     margin-right: -4px;
@@ -831,7 +832,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 
 .formTitle,
 .formTitleFocused {
-    color: #333333;
+    color: #4D5258;
 }
 
 .formCellError,
@@ -851,7 +852,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 .headerItemError {
     font-size: 14px;
     font-weight: bold;
-    color: #333333;
+    color: #4D5258;
 }
 
 /* text items */
@@ -1440,7 +1441,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 .metricsTableView .tallCellSelectedOver,
 .metricsTableView .tallCellSelected {
     background-color: #fbfbfb !important;
-    color: #333;
+    color: #4D5258;
 }
 
 .tallCellSelected a,
@@ -1510,7 +1511,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 .treeTallCellDisabled,
 .treeTallCellDisabledDark {
     text-overflow: ellipsis;
-    color: rgb(51, 51, 51);
+    color: #4D5258 ;
     background-color: rgb(250, 250, 250);
     border-width: 1px 0 1px 0;
     border-color: transparent;
@@ -1605,7 +1606,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
 	15) Scrollbars
 ============================================================*/
 .vScrollThumb {
-    border: 1px solid transparent;
+    border: 1px solid #D9D9D9;
 }
 
 .vScrollThumbOver {
@@ -1641,7 +1642,7 @@ div[eventproxy$="_body"][eventproxy^="isc_Menu_"].normal {
     border-color: rgba(0, 0, 0, 0.3);
     border-width: 1px;
     border-style: solid;
-    color: #333333;
+    color: #4D5258;
     background-color: #f0f0f0;
     background-image: linear-gradient(#f0f0f0, #f0f0f0 38%, #e0e0e0);
     background-image: -webkit-linear-gradient(#f0f0f0, #f0f0f0 38%, #e0e0e0);
